--- a/files/qredshift@quintao/po/qredshift@quintao.pot
+++ b/files/qredshift@quintao/po/qredshift@quintao.pot
@@ -192,6 +192,14 @@ msgstr ""
 msgid "On/Off"
 msgstr ""
 
+#. settings-schema.json->keyBrightnessUp->description
+msgid "Increase brightness level"
+msgstr ""
+
+#. settings-schema.json->keyBrightnessDown->description
+msgid "Decrease brightness level"
+msgstr ""
+
 #. settings-schema.json->labelScrollAction->options
 msgid "Bright"
 msgstr ""
