* 1.5.2   - Added keyboard shortcut to increase brightness `<Control>Page_Up`   - Added keyboard shortcut to decrease brightness `<Control>Page_Down`   - Added keyboard shortcut to increase temperature `<Control><Shift>Page_Up`   - Added keyboard shortcut to decrease temperature `<Control><Shift>Page_Down`   - Added support to lower gamma.   - Added option to use a symbolic icon.

--- a/files/qredshift@quintao/po/pt.po
+++ b/files/qredshift@quintao/po/pt.po
@@ -203,6 +203,14 @@ msgstr "Aumentar brilho"
 msgid "Decrease brightness level"
 msgstr "Diminuir brilho"
 
+#. settings-schema.json->keyTempUp->description
+msgid "Increase temperature level"
+msgstr "Aumentar temperatura"
+
+#. settings-schema.json->keyTempDown->description
+msgid "Decrease temperature level"
+msgstr "Diminuir temperatura"
+
 #. settings-schema.json->labelScrollAction->options
 msgid "Bright"
 msgstr "Brilho"
