--- a/files/qredshift@quintao/po/qredshift@quintao.pot
+++ b/files/qredshift@quintao/po/qredshift@quintao.pot
@@ -200,6 +200,14 @@ msgstr ""
 msgid "Decrease brightness level"
 msgstr ""
 
+#. settings-schema.json->keyTempUp->description
+msgid "Increase temperature level"
+msgstr ""
+
+#. settings-schema.json->keyTempDown->description
+msgid "Decrease temperature level"
+msgstr ""
+
 #. settings-schema.json->labelScrollAction->options
 msgid "Bright"
 msgstr ""
