--- a/files/qredshift@quintao/po/da.po
+++ b/files/qredshift@quintao/po/da.po
@@ -3,275 +3,275 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-01-04 13:58-0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2020-12-21 17:46+0100\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 2.3\n"
+"Last-Translator: Alan Mortensen <alanmortensen.am@gmail.com>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: da\n"
 
 #: applet.js:115
 msgid "REDSHIFT NOT INSTALLED!"
-msgstr ""
+msgstr "REDSHIFT ER IKKE INSTALLERET!"
 
 #: applet.js:116
 msgid "Requires Redshift: sudo apt-get install redshift"
-msgstr ""
+msgstr "Kræver Redshift: sudo apt-get install redshift"
 
 #: applet.js:119 applet.js:159
 msgid "Reload Applet"
-msgstr ""
+msgstr "Genindlæs panelprogrammet"
 
 #: applet.js:164
 msgid "Recompile Translations"
-msgstr ""
+msgstr "Kompilér oversættelser igen"
 
 #. settings-schema.json->enabled->description
 #: applet.js:356
 msgid "Enabled"
-msgstr ""
+msgstr "Aktiveret"
 
 #: applet.js:364 applet.js:410
 msgid "Temp:"
-msgstr ""
+msgstr "Temp:"
 
 #: applet.js:375 applet.js:421
 msgid "Bright:"
-msgstr ""
+msgstr "Lys:"
 
 #: applet.js:387 applet.js:635
 msgid "Gamma:"
-msgstr ""
+msgstr "Gamma:"
 
 #. settings-schema.json->enabledNight->description
 #: applet.js:402
 msgid "Night Enabled"
-msgstr ""
+msgstr "Nattilstand aktiveret"
 
 #. settings-schema.json->iconLabel->description
 #: applet.js:464
 msgid "Show Label"
-msgstr ""
+msgstr "Vis etiket"
 
 #: applet.js:618
 msgid "On"
-msgstr ""
+msgstr "Til"
 
 #: applet.js:618 applet.js:620
 msgid "Off"
-msgstr ""
+msgstr "Fra"
 
 #: applet.js:626
 msgid "Day Temperature"
-msgstr ""
+msgstr "Dagtemperatur"
 
 #: applet.js:627
 msgid "Day Brightness"
-msgstr ""
+msgstr "Daglysstyrke"
 
 #: applet.js:629
 msgid "Night Temperature"
-msgstr ""
+msgstr "Nattemperatur"
 
 #: applet.js:630
 msgid "Night Brightness"
-msgstr ""
+msgstr "Natlysstyrke"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->dayTemp->description
 #. settings-schema.json->nightTemp->description
 #: applet.js:632
 msgid "Temperature"
-msgstr ""
+msgstr "Temperatur"
 
 #. settings-schema.json->dayBrightness->description
 #. settings-schema.json->nightBrightness->description
 #: applet.js:633
 msgid "Brightness"
-msgstr ""
+msgstr "Lysstyrke"
 
 #. metadata.json->name
 msgid "QRedshift"
-msgstr ""
+msgstr "QRedshift"
 
 #. metadata.json->description
 msgid ""
-"Sets brightness, gamma levels and color temperature with Redshift. "
-"This applet conflicts with redshift-gtk, make sure you remove it. When installing this applet, it will automatically attempt to disable the default redshift service."
+"Sets brightness, gamma levels and color temperature with Redshift.\n"
+"This applet conflicts with redshift-gtk, make sure you remove it."
 msgstr ""
+"Indstiller lysstyrke, gammaniveau og farvetemperatur med Redshift.\n"
+"Fjern redshift-gtk, da der er en konflikt."
 
 #. settings-schema.json->panel-options->title
 msgid "Settings"
-msgstr ""
+msgstr "Indstillinger"
 
 #. settings-schema.json->panel-location->title
 msgid "Location"
-msgstr ""
+msgstr "Placering"
 
 #. settings-schema.json->panel-shortcuts->title
 msgid "Shortcuts"
-msgstr ""
+msgstr "Genveje"
 
 #. settings-schema.json->info-section->title
 msgid "Tips"
-msgstr ""
+msgstr "Tips"
 
 #. settings-schema.json->opt-section->title
 msgid "Options"
-msgstr ""
+msgstr "Valgmuligheder"
 
 #. settings-schema.json->day-section->title
 msgid "Day Settings"
-msgstr ""
+msgstr "Dagindstillinger"
 
 #. settings-schema.json->night-section->title
 msgid "Night Settings"
-msgstr ""
+msgstr "Natindstillinger"
 
 #. settings-schema.json->keybind-section->title
 msgid "Key Bindings"
-msgstr ""
+msgstr "Tastegenveje"
 
 #. settings-schema.json->location-section->title
 msgid "Location Settings"
-msgstr ""
+msgstr "Placeringsindstillinger"
 
 #. settings-schema.json->autoUpdate->description
 msgid "Auto Update"
-msgstr ""
+msgstr "Automatisk opdatering"
 
 #. settings-schema.json->autoUpdate->tooltip
 msgid "Continuously adjust color temperature"
-msgstr ""
+msgstr "Justér farvetemperaturen kontinuert"
 
 #. settings-schema.json->autoUpdateInterval->units
 msgid "Sec."
-msgstr ""
+msgstr "Sek."
 
 #. settings-schema.json->autoUpdateInterval->description
 msgid "Update interval"
-msgstr ""
+msgstr "Opdateringsinterval"
 
 #. settings-schema.json->adjustmentMethod->description
 msgid "Adjustment Method"
-msgstr ""
+msgstr "Justeringsmetode"
 
 #. settings-schema.json->adjustmentMethod->options
 msgid "needload"
-msgstr ""
+msgstr "needload"
 
 #. settings-schema.json->adjustmentMethod->options
 msgid "randr"
-msgstr ""
+msgstr "randr"
 
 #. settings-schema.json->adjustmentMethod->options
 msgid "vidmode"
-msgstr ""
+msgstr "vidmode"
 
 #. settings-schema.json->adjustmentMethod->tooltip
 msgid "Method to use to set color temperature"
-msgstr ""
+msgstr "Metode til indstilling af farvetemperaturen"
 
 #. settings-schema.json->labelScrollAction->description
 msgid "Icon Scroll Action"
-msgstr ""
+msgstr "Ikonrulningshandling"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Disabled"
-msgstr ""
+msgstr "Deaktiveret"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->keyToggle->description
 msgid "On/Off"
-msgstr ""
+msgstr "Til/fra"
 
 #. settings-schema.json->keyBrightnessUp->description
 msgid "Increase brightness level"
-msgstr ""
+msgstr "Forøg lysstyrkeniveau"
 
 #. settings-schema.json->keyBrightnessDown->description
 msgid "Decrease brightness level"
-msgstr ""
+msgstr "Formindsk lysstyrkeniveau"
 
 #. settings-schema.json->keyTempUp->description
 msgid "Increase temperature level"
-msgstr ""
+msgstr "Forøg temperaturniveau"
 
 #. settings-schema.json->keyTempDown->description
 msgid "Decrease temperature level"
-msgstr ""
-
-#. settings-schema.json->keyGammaUp->description
-msgid "Increase gamma level"
-msgstr ""
-
-#. settings-schema.json->keyGammaDown->description
-msgid "Decrease gamma level"
-msgstr ""
+msgstr "Formindsk temperaturniveau"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Bright"
-msgstr ""
+msgstr "Lys"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->gammaMix->description
 msgid "Gamma"
-msgstr ""
+msgstr "Gamma"
 
 #. settings-schema.json->labelScrollAction->tooltip
 msgid "Action when scroll on applet icon."
-msgstr ""
+msgstr "Handling ved rulning på ikonet."
 
 #. settings-schema.json->dayTemp->units
 #. settings-schema.json->nightTemp->units
 msgid "K"
-msgstr ""
+msgstr "K"
 
 #. settings-schema.json->dayBrightness->units
 #. settings-schema.json->nightBrightness->units
 msgid "%"
-msgstr ""
+msgstr "%"
 
 #. settings-schema.json->locationRemote->description
 msgid "Remote Location"
-msgstr ""
+msgstr "Fjernplacering"
 
 #. settings-schema.json->locationRemote->tooltip
 #. settings-schema.json->locationUpdate->tooltip
 msgid "Native geoclue on redshift can make the experience slow."
-msgstr ""
+msgstr "Indbygget geoclue i redshift kan få det til at føles langsomt."
 
 #. settings-schema.json->locationUpdate->description
 msgid "Update Location"
-msgstr ""
+msgstr "Opdatér placering"
 
 #. settings-schema.json->locationLatitude->description
 msgid "Latitude"
-msgstr ""
+msgstr "Breddegrad"
 
 #. settings-schema.json->locationLongitude->description
 msgid "Longitude"
-msgstr ""
+msgstr "Længdegrad"
 
 #. settings-schema.json->aboutLocation->description
 msgid ""
 "Native geoclue on redshift can make the experience slow.\n"
 "Using: https://geolocation-db.com/"
 msgstr ""
+"Indbygget geoclue i redshift kan få det til at føles langsomt.\n"
+"Bruger: https://geolocation-db.com/"
 
 #. settings-schema.json->textTips->description
 msgid "* Right-click the sliders to reset the default (neutral) value."
-msgstr ""
+msgstr "* Højreklik skyderne for at nulstille til den neutrale standardværdi."
 
 #. settings-schema.json->textInfo->description
 msgid ""
-"If you like and use this applet take the time to visit it's page on Cinnamon"
-" Spices and give it a star. You only need a github account to do this."
+"If you like and use this applet take the time to visit it's page on Cinnamon "
+"Spices and give it a star. You only need a github account to do this."
 msgstr ""
+"Bruger du dette panelprogram og kan lide det, så besøg venligst dets side på "
+"Cinnamon Spices og giv det en stjerne. Du har kun brug for en githubkonto "
+"for at gøre det."
