--- a/files/qredshift@quintao/po/hu.po
+++ b/files/qredshift@quintao/po/hu.po
@@ -3,275 +3,283 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-01-04 13:58-0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-02-17 18:14+0100\n"
+"Language: hu\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: Kálmán „KAMI” Szalai <kami911@gmail.com>\n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.3\n"
 
 #: applet.js:115
 msgid "REDSHIFT NOT INSTALLED!"
-msgstr ""
+msgstr "Redshift nincsen telepítve."
 
 #: applet.js:116
 msgid "Requires Redshift: sudo apt-get install redshift"
 msgstr ""
+"A Redshift alkalmazást telepítését igényli, amelyet a következő módon "
+"telepítheti fel: sudo apt-get install redshift"
 
 #: applet.js:119 applet.js:159
 msgid "Reload Applet"
-msgstr ""
+msgstr "Kisalkalmazás újratöltése"
 
 #: applet.js:164
 msgid "Recompile Translations"
-msgstr ""
+msgstr "Fordítások újraépítése"
 
 #. settings-schema.json->enabled->description
 #: applet.js:356
 msgid "Enabled"
-msgstr ""
+msgstr "Engedélyezve"
 
 #: applet.js:364 applet.js:410
 msgid "Temp:"
-msgstr ""
+msgstr "Színhőmérséklet:"
 
 #: applet.js:375 applet.js:421
 msgid "Bright:"
-msgstr ""
+msgstr "Világosság:"
 
 #: applet.js:387 applet.js:635
 msgid "Gamma:"
-msgstr ""
+msgstr "Gamma:"
 
 #. settings-schema.json->enabledNight->description
 #: applet.js:402
 msgid "Night Enabled"
-msgstr ""
+msgstr "Éjszakai üzemmód engedélyezve"
 
 #. settings-schema.json->iconLabel->description
 #: applet.js:464
 msgid "Show Label"
-msgstr ""
+msgstr "Címke megjelenítése"
 
 #: applet.js:618
 msgid "On"
-msgstr ""
+msgstr "Be"
 
 #: applet.js:618 applet.js:620
 msgid "Off"
-msgstr ""
+msgstr "Ki"
 
 #: applet.js:626
 msgid "Day Temperature"
-msgstr ""
+msgstr "Napközbeni színhőmérséklet"
 
 #: applet.js:627
 msgid "Day Brightness"
-msgstr ""
+msgstr "Napközbeni fényerő"
 
 #: applet.js:629
 msgid "Night Temperature"
-msgstr ""
+msgstr "Éjszakai színhőmérséklet"
 
 #: applet.js:630
 msgid "Night Brightness"
-msgstr ""
+msgstr "Éjszakai fényerő"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->dayTemp->description
 #. settings-schema.json->nightTemp->description
 #: applet.js:632
 msgid "Temperature"
-msgstr ""
+msgstr "Hőmérséklet"
 
 #. settings-schema.json->dayBrightness->description
 #. settings-schema.json->nightBrightness->description
 #: applet.js:633
 msgid "Brightness"
-msgstr ""
+msgstr "Fényerő"
 
 #. metadata.json->name
 msgid "QRedshift"
-msgstr ""
+msgstr "QRedshift"
 
 #. metadata.json->description
 msgid ""
-"Sets brightness, gamma levels and color temperature with Redshift. "
-"This applet conflicts with redshift-gtk, make sure you remove it. When installing this applet, it will automatically attempt to disable the default redshift service."
+"Sets brightness, gamma levels and color temperature with Redshift.\n"
+"This applet conflicts with redshift-gtk, make sure you remove it."
 msgstr ""
+"Beállítja a fényerő, a gamma szintjeit és a színhőmérsékletet a Redshit "
+"segítségével.\n"
+"Ez a kisalkalmazás nem működik együtt a redshift-gtk csomaggal. "
+"Távolítsa el ezt a csomagot a megfelelő működéshez."
 
 #. settings-schema.json->panel-options->title
 msgid "Settings"
-msgstr ""
+msgstr "Beállítások"
 
 #. settings-schema.json->panel-location->title
 msgid "Location"
-msgstr ""
+msgstr "Hely"
 
 #. settings-schema.json->panel-shortcuts->title
 msgid "Shortcuts"
-msgstr ""
+msgstr "Gyorsbillentyűk"
 
 #. settings-schema.json->info-section->title
 msgid "Tips"
-msgstr ""
+msgstr "Tippek"
 
 #. settings-schema.json->opt-section->title
 msgid "Options"
-msgstr ""
+msgstr "Beállítások"
 
 #. settings-schema.json->day-section->title
 msgid "Day Settings"
-msgstr ""
+msgstr "Napközbeni beállítások"
 
 #. settings-schema.json->night-section->title
 msgid "Night Settings"
-msgstr ""
+msgstr "Éjszakai beállítások"
 
 #. settings-schema.json->keybind-section->title
 msgid "Key Bindings"
-msgstr ""
+msgstr "Billentyűtársítások"
 
 #. settings-schema.json->location-section->title
 msgid "Location Settings"
-msgstr ""
+msgstr "Földrajzi helyzet beállítások"
 
 #. settings-schema.json->autoUpdate->description
 msgid "Auto Update"
-msgstr ""
+msgstr "Automatikus frissítés"
 
 #. settings-schema.json->autoUpdate->tooltip
 msgid "Continuously adjust color temperature"
-msgstr ""
+msgstr "Képernyő színhőmérsékletének folyamatos beállítása"
 
 #. settings-schema.json->autoUpdateInterval->units
 msgid "Sec."
-msgstr ""
+msgstr "mp"
 
 #. settings-schema.json->autoUpdateInterval->description
 msgid "Update interval"
-msgstr ""
+msgstr "Frissítési időköz"
 
 #. settings-schema.json->adjustmentMethod->description
 msgid "Adjustment Method"
-msgstr ""
+msgstr "Illesztési eljárás"
 
 #. settings-schema.json->adjustmentMethod->options
 msgid "needload"
-msgstr ""
+msgstr "needload"
 
 #. settings-schema.json->adjustmentMethod->options
 msgid "randr"
-msgstr ""
+msgstr "randr"
 
 #. settings-schema.json->adjustmentMethod->options
 msgid "vidmode"
-msgstr ""
+msgstr "vidmode"
 
 #. settings-schema.json->adjustmentMethod->tooltip
 msgid "Method to use to set color temperature"
-msgstr ""
+msgstr "Színhőmérséklet beállításának üzemmódja"
 
 #. settings-schema.json->labelScrollAction->description
 msgid "Icon Scroll Action"
-msgstr ""
+msgstr "Egérgörgő művelet"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Disabled"
-msgstr ""
+msgstr "Tiltva"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->keyToggle->description
 msgid "On/Off"
-msgstr ""
+msgstr "Be/Ki"
 
 #. settings-schema.json->keyBrightnessUp->description
 msgid "Increase brightness level"
-msgstr ""
+msgstr "Fényerő növelése"
 
 #. settings-schema.json->keyBrightnessDown->description
 msgid "Decrease brightness level"
-msgstr ""
+msgstr "Fényerő csökkentése"
 
 #. settings-schema.json->keyTempUp->description
 msgid "Increase temperature level"
-msgstr ""
+msgstr "Színhőmérséklet növelése"
 
 #. settings-schema.json->keyTempDown->description
 msgid "Decrease temperature level"
-msgstr ""
-
-#. settings-schema.json->keyGammaUp->description
-msgid "Increase gamma level"
-msgstr ""
-
-#. settings-schema.json->keyGammaDown->description
-msgid "Decrease gamma level"
-msgstr ""
+msgstr "Színhőmérséklet növelése csökkentése"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Bright"
-msgstr ""
+msgstr "Fényerő"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->gammaMix->description
 msgid "Gamma"
-msgstr ""
+msgstr "Gamma"
 
 #. settings-schema.json->labelScrollAction->tooltip
 msgid "Action when scroll on applet icon."
-msgstr ""
+msgstr "Egérgörgő művelet a kisalkalmazás ikonján."
 
 #. settings-schema.json->dayTemp->units
 #. settings-schema.json->nightTemp->units
 msgid "K"
-msgstr ""
+msgstr "K"
 
 #. settings-schema.json->dayBrightness->units
 #. settings-schema.json->nightBrightness->units
 msgid "%"
-msgstr ""
+msgstr "%"
 
 #. settings-schema.json->locationRemote->description
 msgid "Remote Location"
-msgstr ""
+msgstr "Távoli földrajzi helyzet"
 
 #. settings-schema.json->locationRemote->tooltip
 #. settings-schema.json->locationUpdate->tooltip
 msgid "Native geoclue on redshift can make the experience slow."
-msgstr ""
+msgstr "A natív geoclue használata a redshift alkalmazást lelassíthatja."
 
 #. settings-schema.json->locationUpdate->description
 msgid "Update Location"
-msgstr ""
+msgstr "Földrajzi helyzet frissítése"
 
 #. settings-schema.json->locationLatitude->description
 msgid "Latitude"
-msgstr ""
+msgstr "Szélesség"
 
 #. settings-schema.json->locationLongitude->description
 msgid "Longitude"
-msgstr ""
+msgstr "Hosszúság"
 
 #. settings-schema.json->aboutLocation->description
 msgid ""
 "Native geoclue on redshift can make the experience slow.\n"
 "Using: https://geolocation-db.com/"
 msgstr ""
+"A natív geoclue használata a redshift alkalmazást lelassíthatja.\n"
+"A https://geolocation-db.com/ webhely használatával."
 
 #. settings-schema.json->textTips->description
 msgid "* Right-click the sliders to reset the default (neutral) value."
 msgstr ""
+"* Jobb gombbal kattintva a gördítősávra visszaállítja az alapértelmezett "
+"(semleges) értéket."
 
 #. settings-schema.json->textInfo->description
 msgid ""
-"If you like and use this applet take the time to visit it's page on Cinnamon"
-" Spices and give it a star. You only need a github account to do this."
+"If you like and use this applet take the time to visit it's page on "
+"Cinnamon Spices and give it a star. You only need a github account to do "
+"this."
 msgstr ""
+"További információkért látogassa meg a Spices webhelyet, amit elérhet az "
+"alábbi gombra kattintva. Itt továbbá megjegyzéseket fűzhet, vagy "
+"kérdéseket tehet fel a kisalkalmazással kapcsolatban a közösségnek a "
+"Github fiókjával bejelentkezve. A webhelyen az ismert hibákról, "
+"hibaelhárításról, változási megjegyzésekről és egyebekről is olvashat."
