--- a/files/qredshift@quintao/po/pt.po
+++ b/files/qredshift@quintao/po/pt.po
@@ -104,11 +104,11 @@ msgstr "QRedshift"
 
 #. metadata.json->description
 msgid ""
-"Sets brightness, gamma levels and color temperature with Redshift.\n"
-"This applet conflicts with redshift-gtk, make sure you remove it."
+"Sets brightness, gamma levels and color temperature with Redshift. "
+"This applet conflicts with redshift-gtk, make sure you remove it. When installing this applet, it will automatically attempt to disable the default redshift service."
 msgstr ""
-"Define o brilho, os níveis de gama e a temperatura da cor com Redshift.\n"
-"Este applet entra em conflito com o redshift-gtk, certifique-se de removê-lo."
+"Define o brilho, os níveis de gama e a temperatura da cor com Redshift. "
+"Este applet entra em conflito com o redshift-gtk, certifique-se de removê-lo. Ao instalar este applet, ele tentará desativar automaticamente o serviço padrão do redshift."
 
 #. settings-schema.json->panel-options->title
 msgid "Settings"
