--- a/files/qredshift@quintao/po/qredshift@quintao.pot
+++ b/files/qredshift@quintao/po/qredshift@quintao.pot
@@ -104,7 +104,7 @@ msgstr ""
 #. metadata.json->description
 msgid ""
 "Sets brightness, gamma levels and color temperature with Redshift. "
-"This applet conflicts with redshift-gtk, make sure you remove it. When installing this applet, it will automatically attempt to disable the default redshift service."
+"This applet conflicts with redshift-gtk, make sure you remove it."
 msgstr ""
 
 #. settings-schema.json->panel-options->title
