--- a/files/qredshift@quintao/po/de.po
+++ b/files/qredshift@quintao/po/de.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-01-04 13:58-0300\n"
-"PO-Revision-Date: 2020-03-14 15:10+0100\n"
+"PO-Revision-Date: 2021-02-24 22:11+0100\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.3\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: de\n"
 
 #: applet.js:115
 msgid "REDSHIFT NOT INSTALLED!"
@@ -32,7 +32,7 @@ msgstr "Applet neuladen"
 
 #: applet.js:164
 msgid "Recompile Translations"
-msgstr "Übersetzungen recompilieren"
+msgstr "Übersetzungen neu kompilieren"
 
 #. settings-schema.json->enabled->description
 #: applet.js:356
@@ -59,7 +59,7 @@ msgstr "Nachtmodus aktivieren"
 #. settings-schema.json->iconLabel->description
 #: applet.js:464
 msgid "Show Label"
-msgstr "Zeige Beschriftung"
+msgstr "Beschriftung anzeigen"
 
 #: applet.js:618
 msgid "On"
@@ -71,19 +71,19 @@ msgstr "Aus"
 
 #: applet.js:626
 msgid "Day Temperature"
-msgstr "Farbtemperatur Tag"
+msgstr "Tages-Farbtemperatur"
 
 #: applet.js:627
 msgid "Day Brightness"
-msgstr "Helligkeit Tag"
+msgstr "Tag-Helligkeit"
 
 #: applet.js:629
 msgid "Night Temperature"
-msgstr "Farbtemperatur Nacht"
+msgstr "Nacht-Farbtemperatur"
 
 #: applet.js:630
 msgid "Night Brightness"
-msgstr "Helligkeit Nacht"
+msgstr "Nacht-Helligkeit"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->dayTemp->description
@@ -104,12 +104,12 @@ msgstr "QRedshift"
 
 #. metadata.json->description
 msgid ""
-"Sets brightness, gamma levels and color temperature with Redshift.\n"
-"This applet conflicts with redshift-gtk, make sure you remove it."
+"Sets brightness, gamma levels and color temperature with Redshift. This "
+"applet conflicts with redshift-gtk, make sure you remove it."
 msgstr ""
-"Stellt Helligkeit, Gamma und Farbtemperatur mit Redshift ein.\n"
-"Dieses Applet steht in Konflikt mit redshift-gtk, stelle sicher das dies "
-"nicht installiert ist."
+"Stellt Helligkeit, Gamma-Pegel und Farbtemperatur mit Redshift ein. Dieses "
+"Applet verursacht Konflikte mit »redshift-gtk«. Stellen Sie sicher, dass "
+"dieses Paket nicht installiert ist."
 
 #. settings-schema.json->panel-options->title
 msgid "Settings"
@@ -133,11 +133,11 @@ msgstr "Optionen"
 
 #. settings-schema.json->day-section->title
 msgid "Day Settings"
-msgstr "Einstellungen Tagesmodus"
+msgstr "Tagesmodus-Einstellungen"
 
 #. settings-schema.json->night-section->title
 msgid "Night Settings"
-msgstr "Einstellungen Nachtmodus"
+msgstr "Nachtmodus-Einstellungen"
 
 #. settings-schema.json->keybind-section->title
 msgid "Key Bindings"
@@ -145,11 +145,11 @@ msgstr "Tastenkürzel"
 
 #. settings-schema.json->location-section->title
 msgid "Location Settings"
-msgstr "Standort Einstellungen"
+msgstr "Standort-Einstellungen"
 
 #. settings-schema.json->autoUpdate->description
 msgid "Auto Update"
-msgstr "Automatische Anpassung"
+msgstr "Automatische Aktualisierung"
 
 #. settings-schema.json->autoUpdate->tooltip
 msgid "Continuously adjust color temperature"
@@ -181,11 +181,11 @@ msgstr "vidmode"
 
 #. settings-schema.json->adjustmentMethod->tooltip
 msgid "Method to use to set color temperature"
-msgstr "Methe zur Einstellung der Fartemperatur"
+msgstr "Methode zur Einstellung der Farbtemperatur"
 
 #. settings-schema.json->labelScrollAction->description
 msgid "Icon Scroll Action"
-msgstr "Icon Scroll Aktion"
+msgstr "Symbolbildlauf-Aktion"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Disabled"
@@ -195,6 +195,30 @@ msgstr "Deaktiviert"
 #. settings-schema.json->keyToggle->description
 msgid "On/Off"
 msgstr "An/Aus"
+
+#. settings-schema.json->keyBrightnessUp->description
+msgid "Increase brightness level"
+msgstr "Helligkeitsstufe erhöhen"
+
+#. settings-schema.json->keyBrightnessDown->description
+msgid "Decrease brightness level"
+msgstr "Helligkeitsstufe absenken"
+
+#. settings-schema.json->keyTempUp->description
+msgid "Increase temperature level"
+msgstr "Farbtemperaturstufe erhöhen"
+
+#. settings-schema.json->keyTempDown->description
+msgid "Decrease temperature level"
+msgstr "Farbtemperaturstufe absenken"
+
+#. settings-schema.json->keyGammaUp->description
+msgid "Increase gamma level"
+msgstr "Gamma-Pegel erhöhen"
+
+#. settings-schema.json->keyGammaDown->description
+msgid "Decrease gamma level"
+msgstr "Gamma-Pegel absenken"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Bright"
@@ -207,7 +231,7 @@ msgstr "Gammakorrektur"
 
 #. settings-schema.json->labelScrollAction->tooltip
 msgid "Action when scroll on applet icon."
-msgstr "Aktion beim Scrollen auf dem Applet Icon."
+msgstr "Aktion beim Scrollen auf dem Appletsymbol."
 
 #. settings-schema.json->dayTemp->units
 #. settings-schema.json->nightTemp->units
@@ -227,7 +251,7 @@ msgstr "Standort aus Internet beziehen"
 #. settings-schema.json->locationUpdate->tooltip
 msgid "Native geoclue on redshift can make the experience slow."
 msgstr ""
-"Urspüngliches geoclue bei redshift kann die Benutzererfahrung verlangsamen."
+"Natives »geoclue« kann bei »redshift« die Benutzererfahrung verlangsamen."
 
 #. settings-schema.json->locationUpdate->description
 msgid "Update Location"
@@ -246,8 +270,8 @@ msgid ""
 "Native geoclue on redshift can make the experience slow.\n"
 "Using: https://geolocation-db.com/"
 msgstr ""
-"Urspüngliches geoclue bei redshift kann die Benutzererfahrung verlangsamen.\n"
-"Benutze daher : https://geolocation-db.com/"
+"Natives »geoclue« kann bei »redshift« die Benutzererfahrung verlangsamen.\n"
+"Benutze daher: https://geolocation-db.com/"
 
 #. settings-schema.json->textTips->description
 msgid "* Right-click the sliders to reset the default (neutral) value."
@@ -260,6 +284,6 @@ msgid ""
 "If you like and use this applet take the time to visit it's page on Cinnamon "
 "Spices and give it a star. You only need a github account to do this."
 msgstr ""
-"Falls Du dieses Applet magst, nimm Dir bitte die Zeit die Cinnamon Spices "
-"Seite zu besuchen und vergib einen Stern. Du benötigst dazu nur einen Github "
-"Account."
+"Wenn Sie dieses Applet verwenden und mögen, nehmen Sie sich die Zeit die "
+"Cinnamon Spices-Webseite zu besuchen und dem Applet einen Stern zu geben. "
+"Sie benötigen dazu nur einen GitHub-Account."
