--- a/files/qredshift@quintao/po/hu.po
+++ b/files/qredshift@quintao/po/hu.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-01-04 13:58-0300\n"
-"PO-Revision-Date: 2021-02-17 18:14+0100\n"
+"PO-Revision-Date: 2021-02-22 11:22+0100\n"
+"Last-Translator: Kálmán „KAMI” Szalai <kami911@gmail.com>\n"
+"Language-Team: \n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: Kálmán „KAMI” Szalai <kami911@gmail.com>\n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.3\n"
 
 #: applet.js:115
 msgid "REDSHIFT NOT INSTALLED!"
-msgstr "Redshift nincsen telepítve."
+msgstr "A Redshift nincsen telepítve."
 
 #: applet.js:116
 msgid "Requires Redshift: sudo apt-get install redshift"
@@ -105,13 +105,15 @@ msgstr "QRedshift"
 
 #. metadata.json->description
 msgid ""
-"Sets brightness, gamma levels and color temperature with Redshift.\n"
-"This applet conflicts with redshift-gtk, make sure you remove it."
+"Sets brightness, gamma levels and color temperature with Redshift. This "
+"applet conflicts with redshift-gtk, make sure you remove it. When installing "
+"this applet, it will automatically attempt to disable the default redshift "
+"service."
 msgstr ""
 "Beállítja a fényerő, a gamma szintjeit és a színhőmérsékletet a Redshit "
-"segítségével.\n"
-"Ez a kisalkalmazás nem működik együtt a redshift-gtk csomaggal. "
-"Távolítsa el ezt a csomagot a megfelelő működéshez."
+"segítségével. Ez a kisalkalmazás nem működik együtt a redshift-gtk "
+"csomaggal. A kisalkalmazás telepítése során automatikusan megkísérli "
+"letiltani az alapértelmezett redshift szolgáltatást."
 
 #. settings-schema.json->panel-options->title
 msgid "Settings"
@@ -159,7 +161,7 @@ msgstr "Képernyő színhőmérsékletének folyamatos beállítása"
 
 #. settings-schema.json->autoUpdateInterval->units
 msgid "Sec."
-msgstr "mp"
+msgstr "másodperc"
 
 #. settings-schema.json->autoUpdateInterval->description
 msgid "Update interval"
@@ -212,7 +214,15 @@ msgstr "Színhőmérséklet növelése"
 
 #. settings-schema.json->keyTempDown->description
 msgid "Decrease temperature level"
-msgstr "Színhőmérséklet növelése csökkentése"
+msgstr "Színhőmérséklet csökkentése"
+
+#. settings-schema.json->keyGammaUp->description
+msgid "Increase gamma level"
+msgstr "Gamma szint növelése"
+
+#. settings-schema.json->keyGammaDown->description
+msgid "Decrease gamma level"
+msgstr "Gamma szint csökkentése"
 
 #. settings-schema.json->labelScrollAction->options
 msgid "Bright"
@@ -274,12 +284,11 @@ msgstr ""
 
 #. settings-schema.json->textInfo->description
 msgid ""
-"If you like and use this applet take the time to visit it's page on "
-"Cinnamon Spices and give it a star. You only need a github account to do "
-"this."
+"If you like and use this applet take the time to visit it's page on Cinnamon "
+"Spices and give it a star. You only need a github account to do this."
 msgstr ""
 "További információkért látogassa meg a Spices webhelyet, amit elérhet az "
-"alábbi gombra kattintva. Itt továbbá megjegyzéseket fűzhet, vagy "
-"kérdéseket tehet fel a kisalkalmazással kapcsolatban a közösségnek a "
-"Github fiókjával bejelentkezve. A webhelyen az ismert hibákról, "
-"hibaelhárításról, változási megjegyzésekről és egyebekről is olvashat."
+"alábbi gombra kattintva. Itt továbbá megjegyzéseket fűzhet, vagy kérdéseket "
+"tehet fel a kisalkalmazással kapcsolatban a közösségnek a Github fiókjával "
+"bejelentkezve. A webhelyen az ismert hibákról, hibaelhárításról, változási "
+"megjegyzésekről és egyebekről is olvashat."
