--- a/files/qredshift@quintao/po/hu.po
+++ b/files/qredshift@quintao/po/hu.po
@@ -8,94 +8,108 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-01-04 13:58-0300\n"
-"PO-Revision-Date: 2021-04-05 10:57+0200\n"
-"Last-Translator: Bosák Balázs <bossbob88@gmail.com>\n"
+"PO-Revision-Date: 2021-09-26 07:50+0200\n"
+"Last-Translator: Kálmán „KAMI” Szalai <kami911@gmail.com>\n"
 "Language-Team: \n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 2.3\n"
 
-#: applet.js:115
+#: applet.js:207
+msgid "Reload Applet"
+msgstr "Kisalkalmazás újratöltése"
+
+#: applet.js:212
+msgid "Recompile Translations"
+msgstr "Fordítások újraépítése"
+
+#: applet.js:265
 msgid "REDSHIFT NOT INSTALLED!"
 msgstr "A REDSHIFT NINCS INSTALLÁLVA!"
 
-#: applet.js:116
+#: applet.js:266
 msgid "Requires Redshift: sudo apt-get install redshift"
 msgstr ""
 "A Redshift alkalmazást telepítését igényli, amelyet a következő módon "
 "telepítheti fel: sudo apt-get install redshift"
 
-#: applet.js:119 applet.js:159
-msgid "Reload Applet"
-msgstr "Kisalkalmazás újratöltése"
-
-#: applet.js:164
-msgid "Recompile Translations"
-msgstr "Fordítások újraépítése"
+#: applet.js:510
+msgid "may conflict with this applet, it is highly recommended removing it."
+msgstr ""
+"a kisalkalmazás nem működik együtt ezzel a kisalkalmazással, ezért távolítsa "
+"el azt a csomagot."
 
 #. settings-schema.json->enabled->description
-#: applet.js:356
+#: applet.js:528
 msgid "Enabled"
 msgstr "Engedélyezve"
 
-#: applet.js:364 applet.js:410
+#: applet.js:536 applet.js:582
 msgid "Temp:"
 msgstr "Színhőmérséklet:"
 
-#: applet.js:375 applet.js:421
+#: applet.js:547 applet.js:593
 msgid "Bright:"
 msgstr "Világosság:"
 
-#: applet.js:387 applet.js:635
+#: applet.js:559 applet.js:861
 msgid "Gamma:"
 msgstr "Gamma:"
 
 #. settings-schema.json->enabledNight->description
-#: applet.js:402
+#: applet.js:574
 msgid "Night Enabled"
 msgstr "Éjszakai üzemmód engedélyezve"
 
 #. settings-schema.json->iconLabel->description
-#: applet.js:464
+#: applet.js:636
 msgid "Show Label"
 msgstr "Címke megjelenítése"
 
-#: applet.js:618
+#: applet.js:830 applet.js:846
+msgid "Night"
+msgstr "Éjszaka"
+
+#: applet.js:831 applet.js:847
+msgid "Day"
+msgstr "Nappal"
+
+#: applet.js:838
 msgid "On"
 msgstr "Be"
 
-#: applet.js:618 applet.js:620
+#: applet.js:838 applet.js:840
 msgid "Off"
 msgstr "Ki"
 
-#: applet.js:626
+#: applet.js:852
 msgid "Day Temperature"
 msgstr "Napközbeni színhőmérséklet"
 
-#: applet.js:627
+#: applet.js:853
 msgid "Day Brightness"
 msgstr "Napközbeni fényerő"
 
-#: applet.js:629
+#: applet.js:855
 msgid "Night Temperature"
 msgstr "Éjszakai színhőmérséklet"
 
-#: applet.js:630
+#: applet.js:856
 msgid "Night Brightness"
 msgstr "Éjszakai fényerő"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->dayTemp->description
 #. settings-schema.json->nightTemp->description
-#: applet.js:632
+#: applet.js:858
 msgid "Temperature"
 msgstr "Hőmérséklet"
 
 #. settings-schema.json->dayBrightness->description
 #. settings-schema.json->nightBrightness->description
-#: applet.js:633
+#: applet.js:859
 msgid "Brightness"
 msgstr "Fényerő"
 
@@ -106,14 +120,11 @@ msgstr "QRedshift"
 #. metadata.json->description
 msgid ""
 "Sets brightness, gamma levels and color temperature with Redshift. This "
-"applet conflicts with redshift-gtk, make sure you remove it. When installing "
-"this applet, it will automatically attempt to disable the default redshift "
-"service."
+"applet conflicts with redshift-gtk, make sure you remove it."
 msgstr ""
 "Beállítja a fényerő, a gamma szintjeit és a színhőmérsékletet a Redshit "
 "segítségével. Ez a kisalkalmazás nem működik együtt a redshift-gtk "
-"csomaggal. A kisalkalmazás telepítése során automatikusan megkísérli "
-"letiltani az alapértelmezett redshift szolgáltatást."
+"csomaggal, ezért távolítsa el ezt a csomagot."
 
 #. settings-schema.json->panel-options->title
 msgid "Settings"
@@ -200,6 +211,23 @@ msgstr "Tiltva"
 msgid "On/Off"
 msgstr "Be/Ki"
 
+#. settings-schema.json->labelScrollAction->options
+msgid "Bright"
+msgstr "Fényerő"
+
+#. settings-schema.json->labelScrollAction->options
+#. settings-schema.json->gammaMix->description
+msgid "Gamma"
+msgstr "Gamma"
+
+#. settings-schema.json->labelScrollAction->tooltip
+msgid "Action when scroll on applet icon."
+msgstr "Egérgörgő művelet a kisalkalmazás ikonján."
+
+#. settings-schema.json->symbolicIcon->description
+msgid "Use symbolic icon"
+msgstr "Szimbolikus ikon"
+
 #. settings-schema.json->keyBrightnessUp->description
 msgid "Increase brightness level"
 msgstr "Fényerő növelése"
@@ -224,19 +252,6 @@ msgstr "Gamma szint növelése"
 msgid "Decrease gamma level"
 msgstr "Gamma szint csökkentése"
 
-#. settings-schema.json->labelScrollAction->options
-msgid "Bright"
-msgstr "Fényerő"
-
-#. settings-schema.json->labelScrollAction->options
-#. settings-schema.json->gammaMix->description
-msgid "Gamma"
-msgstr "Gamma"
-
-#. settings-schema.json->labelScrollAction->tooltip
-msgid "Action when scroll on applet icon."
-msgstr "Egérgörgő művelet a kisalkalmazás ikonján."
-
 #. settings-schema.json->dayTemp->units
 #. settings-schema.json->nightTemp->units
 msgid "K"
@@ -246,6 +261,18 @@ msgstr "K"
 #. settings-schema.json->nightBrightness->units
 msgid "%"
 msgstr "%"
+
+#. settings-schema.json->manualNightTime->description
+msgid "Use Manual Night Time"
+msgstr "Kézi éjszakai mód használata"
+
+#. settings-schema.json->nightTimeStart->description
+msgid "Choose Start Time"
+msgstr "Kezdési idő"
+
+#. settings-schema.json->nightTimeEnd->description
+msgid "Choose End Time"
+msgstr "Befejezési idő"
 
 #. settings-schema.json->locationRemote->description
 msgid "Remote Location"
@@ -281,6 +308,17 @@ msgid "* Right-click the sliders to reset the default (neutral) value."
 msgstr ""
 "* Jobb gombbal kattintva a gördítősávra visszaállítja az alapértelmezett "
 "(semleges) értéket."
+
+#. settings-schema.json->textHelp->description
+msgid ""
+"When update to a new version make sure you reset the configs to default by "
+"deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
+" You will lost all your configs."
+msgstr ""
+"Új verzióra történő frissítéskor, állítsa vissza a beállításokat az "
+"alapértelmezésre, a „/.cinnamon/configs/qredshift@quintao/qredshift@quintao."
+"json” fájl törlésével.\n"
+"Ezzel minden qredshift kisalkalmazás beállítást el fog veszni."
 
 #. settings-schema.json->textInfo->description
 msgid ""
