* 1.7.3     - Fixed small bug on smooth transition.     - Fixed messages when not using manual night time.

--- a/files/qredshift@quintao/po/pt_BR.po
+++ b/files/qredshift@quintao/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: qredshift@quintao\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-08-30 00:45-0300\n"
-"PO-Revision-Date: 2022-08-30 00:46-0300\n"
+"PO-Revision-Date: 2022-08-31 02:54-0300\n"
 "Last-Translator: Raphael Quintao <raphaelquintao@gmail.com>\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -323,8 +323,8 @@ msgstr ""
 #. settings-schema.json->textTips->description
 msgid "* Right-click the sliders to reset the default (neutral) value."
 msgstr ""
-"* Clique com o botão direito do mouse nos controles deslizantes para "
-"redefinir o valor padrão (neutro)."
+"* Clique com o botão direito do mouse nos sliders para redefinir o valor "
+"padrão (neutro)."
 
 #. settings-schema.json->textHelp->description
 msgid ""
@@ -345,4 +345,3 @@ msgstr ""
 "Se você gosta e usa este applet, visite o site dos Applets do Cinnamon e dê "
 "uma estrela para esse applet. Você só precisa de uma conta no GitHub para "
 "fazer isso."
-
